class ArsArts {
  static const String creo = 'Creo';
  static const String intellego = 'Intellego';
  static const String muto = 'Muto';
  static const String perdo = 'Perdo';
  static const String rego = 'Rego';
  static const String vim = 'Vim';

  static const List<String> all = [creo, intellego, muto, perdo, rego, vim];
}

class ArsForms {
  static const String animal = 'Animal';
  static const String aquam = 'Aquam';
  static const String auram = 'Auram';
  static const String corpus = 'Corpus';
  static const String herbam = 'Herbam';
  static const String ignem = 'Ignem';
  static const String imaginem = 'Imaginem';
  static const String mentem = 'Mentem';
  static const String terram = 'Terram';
  static const String vim = 'Vim';

  static const List<String> all = [animal, aquam, auram, corpus, herbam, ignem, imaginem, mentem, terram, vim];
}

